chore: 빌드 설정 변경